--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,18 @@
-.App {
-  text-align: center;
+.blueChoice {
+	background-color: #4f71d6;
+}
+.redChoice {
+	background-color: #db505e;
+}
+.greenChoice {
+	background-color: #44dd34;
+}
+.yellowChoice {
+	background-color: #ffe862;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.colorBlock {
+	width: 250px;
+	height: 250px;
+	display: inline-block;
 }
